# juice

./: .gitignore  Psychic_KPIs_QTD.pptx  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: demo.csv  log.csv
modules/: metrics.py  palette.py  report.py  storage.py  units.py
modules/ui/: __init__.py  charts.py  heatmap.py  kpi.py  sidebar.py
report_exports/: Psychic_KPIs_2025-05-19.pptx
tests/: conftest.py  test_charts.py  test_metrics.py  test_storage.py
