[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychic_dashboard"
version = "0.1.0"
dependencies = [
    "streamlit>=1.35",
    "pandas>=2.0",
    "altair>=5.2",
    "altair-saver[selenium]>=0.5",
    "python-pptx>=0.6",
    "six>=1.16",
    # "protobuf>=4.24"  â† optional explicit pin
]

[tool.setuptools]
packages = ["modules", "modules.ui"]
